--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -987,13 +987,21 @@
 
             expect(children).to.have.been.called.once;
             expect(children.args[0].length).to.equal(1);
-            const contextParam = children.args[0][0];
-            expect(contextParam.pathname).to.equal('/a');
-            expect(contextParam.route.path).to.equal('/a');
-            expect(contextParam.cancel).to.be.an('undefined');
-            expect(contextParam.redirect).to.be.an('undefined');
-            expect(contextParam.component).to.be.an('undefined');
-            expect(contextParam.next).to.be.an('undefined');
+            expect(children.args[0][0]).to.be.null;
+          });
+
+          it('children function should have this pointing at the route that has the function defined', async() => {
+            let childrenFunctionCalled = false;
+
+            const route = {path: '/a', children: function() {
+              expect(this).to.be.equal(route);
+              childrenFunctionCalled = true;
+            }};
+            router.setRoutes(route);
+
+            await router.render('/a').catch(() => {});
+
+            expect(childrenFunctionCalled, 'children function was expected to be called, but was not').to.be.equal(true);
           });
 
           it('children function should throw on incorrect routes', async() => {
