--- a/test/router/dynamic-redirect.spec.html
+++ b/test/router/dynamic-redirect.spec.html
@@ -86,6 +86,19 @@
           expect(outlet.children[0].tagName).to.match(/x-users-view/i);
         });
 
+        it('should be able to have multiple action redirects', async() => {
+          router.setRoutes([
+            {path: '/', action: context => context.redirect('/u')},
+            {path: '/u', action: context => context.redirect('/users')},
+            {path: '/users', component: 'x-users-list'}
+          ]);
+
+          await router.render('/');
+
+          expect(outlet.children[0].tagName).to.match(/x-users-list/i);
+          verifyActiveRoutes(router, ['/users']);
+        });
+
         it('should use `window.replaceState()` when redirecting from action', async() => {
           const pushSpy = sinon.spy(window.history, 'pushState');
           const replaceSpy = sinon.spy(window.history, 'replaceState');
