--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -987,7 +987,7 @@
 
             expect(children).to.have.been.called.once;
             expect(children.args[0].length).to.equal(1);
-            expect(children.args[0][0]).to.be.null;
+            expect(children.args[0][0]).to.be.an('undefined');
           });
 
           it('children function should have this pointing at the route that has the function defined', async() => {
