fail if there are more than 256 redirects for a path
Fixes #145

--- a/test/router/dynamic-redirect.spec.html
+++ b/test/router/dynamic-redirect.spec.html
@@ -99,6 +99,20 @@
           verifyActiveRoutes(router, ['/users']);
         });
 
+        it('should fail on recursive action redirects', async() => {
+          router.setRoutes([
+            {path: '/a', action: context => context.redirect('/b')},
+            {path: '/b', action: context => context.redirect('/c')},
+            {path: '/c', action: context => context.redirect('/a')},
+          ]);
+
+          const onError = sinon.spy();
+          await router.render('/a').catch(onError);
+
+          expect(outlet.children).to.have.lengthOf(0);
+          expect(onError).to.have.been.called.once;
+        });
+
         it('should use `window.replaceState()` when redirecting from action', async() => {
           const pushSpy = sinon.spy(window.history, 'pushState');
           const replaceSpy = sinon.spy(window.history, 'replaceState');
