Add bundle specific route config demo

--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -8,6 +8,7 @@
 <link rel="import" href="vaadin-router-demo-shared-styles.html">
 
 <script src="../dist/vaadin-router.umd.js"></script>
+<script src="./dynamic-import-shim.js"></script>
 
 <link rel="import" href="demo-elements/x-home-view.html">
 <link rel="import" href="demo-elements/x-image-view.html">
